[gd_scene load_steps=9 format=3 uid="uid://dlrb3kvmkrrc0"]

[ext_resource type="Script" uid="uid://bxf8ua462tug5" path="res://Scripts/File/file_window.gd" id="1_su4cx"]
[ext_resource type="StyleBox" uid="uid://dwkn57nwejros" path="res://Scenes/File_Window/file_window_focused.tres" id="1_us0vl"]
[ext_resource type="Texture2D" uid="uid://ct4lsw0x4lbq0" path="res://visuals/folder.png" id="2_su0r6"]
[ext_resource type="StyleBox" uid="uid://cvovlpmqs7rl3" path="res://Scenes/File_Window/focus_button.tres" id="3_su0r6"]
[ext_resource type="StyleBox" uid="uid://g4bfciooroje" path="res://Scenes/File_Window/normal_button.tres" id="3_us0vl"]
[ext_resource type="PackedScene" uid="uid://dlkaebh8nai8u" path="res://Scenes/icon.tscn" id="6_3u60x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3u60x"]
bg_color = Color(0.690196, 0.690196, 0.690196, 1)
expand_margin_left = 8.0
expand_margin_top = 31.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqq1w"]
bg_color = Color(0.690196, 0.690196, 0.690196, 1)

[node name="file_window" type="Window"]
title = "My Files"
position = Vector2i(0, 36)
size = Vector2i(800, 450)
unresizable = true
theme_override_styles/embedded_border = ExtResource("1_us0vl")
theme_override_styles/embedded_unfocused_border = SubResource("StyleBoxFlat_3u60x")
script = ExtResource("1_su4cx")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 267.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bqq1w")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 10)
layout_mode = 2
texture = ExtResource("2_su0r6")
expand_mode = 1

[node name="hobbies" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = ExtResource("3_su0r6")
theme_override_styles/normal = ExtResource("3_us0vl")
text = "Hobbies"
alignment = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 10)
layout_mode = 2
texture = ExtResource("2_su0r6")
expand_mode = 1

[node name="work" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = ExtResource("3_su0r6")
theme_override_styles/normal = ExtResource("3_us0vl")
text = "Work"
alignment = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(25, 10)
layout_mode = 2
texture = ExtResource("2_su0r6")
expand_mode = 1

[node name="secret" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = ExtResource("3_su0r6")
theme_override_styles/normal = ExtResource("3_us0vl")
text = "Secret"
alignment = 0

[node name="hobby_files" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 274.0
offset_top = -191.0
offset_right = 274.0
offset_bottom = -191.0

[node name="knitting" parent="hobby_files" instance=ExtResource("6_3u60x")]
position = Vector2(61, 49)
icon = ExtResource("2_su0r6")
title = "Knitting"

[node name="ColorRect" parent="hobby_files/knitting" index="0"]
color = Color(0.493545, 0.493546, 0.493546, 0.34902)

[node name="Sprite2D" parent="hobby_files/knitting" index="1"]
texture = ExtResource("2_su0r6")

[node name="Label" parent="hobby_files/knitting" index="2"]
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Knitting"

[node name="bird_watching" parent="hobby_files" instance=ExtResource("6_3u60x")]
position = Vector2(160, 49)
icon = ExtResource("2_su0r6")
title = "Bird Watchi"

[node name="ColorRect" parent="hobby_files/bird_watching" index="0"]
color = Color(0.494118, 0.494118, 0.494118, 0.34902)

[node name="Sprite2D" parent="hobby_files/bird_watching" index="1"]
texture = ExtResource("2_su0r6")

[node name="Label" parent="hobby_files/bird_watching" index="2"]
offset_left = -43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Bird Watching"

[node name="work_files" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 239.0
offset_top = -259.0
offset_right = 279.0
offset_bottom = -219.0

[node name="imp_documents" parent="work_files" instance=ExtResource("6_3u60x")]
position = Vector2(61, 49)
icon = ExtResource("2_su0r6")
title = "Important Documents"

[node name="ColorRect" parent="work_files/imp_documents" index="0"]
color = Color(0.494118, 0.494118, 0.494118, 0.34902)

[node name="Sprite2D" parent="work_files/imp_documents" index="1"]
texture = ExtResource("2_su0r6")

[node name="Label" parent="work_files/imp_documents" index="2"]
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Important Documents"

[node name="reports" parent="work_files" instance=ExtResource("6_3u60x")]
position = Vector2(160, 49)
icon = ExtResource("2_su0r6")
title = "Reports"

[node name="ColorRect" parent="work_files/reports" index="0"]
color = Color(0.494118, 0.494118, 0.494118, 0.34902)

[node name="Sprite2D" parent="work_files/reports" index="1"]
texture = ExtResource("2_su0r6")

[node name="Label" parent="work_files/reports" index="2"]
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Reports"

[node name="graphs" parent="work_files" instance=ExtResource("6_3u60x")]
position = Vector2(259, 49)
icon = ExtResource("2_su0r6")
title = "Graphs"

[node name="ColorRect" parent="work_files/graphs" index="0"]
color = Color(0.494118, 0.494118, 0.494118, 0.34902)

[node name="Sprite2D" parent="work_files/graphs" index="1"]
texture = ExtResource("2_su0r6")

[node name="Label" parent="work_files/graphs" index="2"]
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Graphs"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/hobbies" to="." method="_on_hobbies_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/work" to="." method="_on_work_pressed"]
[connection signal="pressed" from="work_files/imp_documents/Button" to="." method="_on_file_button_pressed"]

[editable path="hobby_files/knitting"]
[editable path="hobby_files/bird_watching"]
[editable path="work_files/imp_documents"]
[editable path="work_files/reports"]
[editable path="work_files/graphs"]
